Reformat code snippets to prevent CodeMirror horizontal scroll

--- a/demo/assets/styles/codemirror.css
+++ b/demo/assets/styles/codemirror.css
@@ -4,7 +4,7 @@
   /* Set height, width, borders, and global font properties here */
   font-size: 16px;
   font-family: monospace;
-  height: 300px;
+  height: 400px;
   color: black;
 }
 
